# adventofcode

./: .gitignore  README.md
2018/rust/aoc2018/src/: day1.rs  main.rs
2019/aoc2019/: build.sbt
2019/aoc2019/src/main/scala/: Day1.scala  InputReader.scala
2019/aoc2019/src/test/scala/: Day1Test.scala
2020/day1/: day1  day1.go  go.mod
2020/day2/: day2.go  day2_test.go  go.mod
2020/day3/: go.mod  main.go
2020/day4/: day4.go  go.mod  passports.txt
2020/day5/: day5.go  days5_test.go  go.mod
2020/day6/: day6.go  go.mod
2021/: .style.yapf  pyproject.toml
2021/days/: day_01.py  day_02.py  day_04.py  day_05.py  day_07.py  day_10.py  day_11.py  day_12.py  day_13.py  day_13_output.txt  day_14.py  day_15.py  day_3.py  day_6.py  day_7.py  day_8.py  day_9.py  inputreader.py
2021/tests/: day_10_test.py  day_12_test.py  day_13_test.py  day_14_test.py  day_15_test.py  day_1_test.py  day_2_test.py  day_3_test.py  day_4_test.py  day_5_test.py  day_6_test.py  day_7_test.py  day_8_test.py  day_9_test.py
2022/python/aoc/: .gitignore  pyproject.toml
2022/python/aoc/aoc/: day13.py  day14.py  day18.py  day21.py
2022/rust/aoc2022/: Cargo.toml
2022/rust/aoc2022/src/: day.rs  day1.rs  day12.rs  day15.rs  day2.rs  day23.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs
2022/rust/aoc2022/tests/: day5-int-test.rs  day6-int-test.rs
2022/rust/aoc2022/tests/common/: mod.rs
2022/scala/aoc2022/: .gitignore  build.sbt
2023/rust/aoc2023/: .gitignore
2023/rust/aoc2023/src/: day1.rs  day2.rs  day3.rs  grid.rs  grid_element.rs  lib.rs  main.rs
(+24 files in other folders)
